--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,19 +25,31 @@ jobs:
         run: cd frontend && npx eslint . --ext .ts,.tsx
 
   sast_scan:
-    name: Static Application Security Testing (SAST)
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+  name: Static Application Security Testing (SAST)
+  runs-on: ubuntu-latest
+  needs: test_backend  # Ensure backend is built first
+  steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: javascript, java
+    - name: Set up Java (LTS Version)
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
+    - name: Build Java Backend
+      run: cd backend && ./mvnw clean package  # Ensure code is built
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v3
+      with:
+        languages: javascript, java
+        source-root: backend/src/main/java  # Explicitly specify source
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v3
+
 
   test_backend:
     name: Test Backend (Spring Boot JUnit)
