--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,6 @@ jobs:
   sast_scan:
     name: Static Application Security Testing (SAST)
     runs-on: ubuntu-latest
-    needs: test_backend  # Ensure backend is built first
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -39,13 +38,13 @@ jobs:
           java-version: '17'
 
       - name: Build Java Backend
-        run: cd backend && ./mvnw clean package  # Ensure code is built
+        run: cd recipe_management_backend && ./mvnw clean package  # Ensure code is built
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: javascript, java
-          source-root: backend/src/main/java  # Explicitly specify source
+          source-root: recipe_management_backend/src/main/java  # Explicitly specify source
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
@@ -78,7 +77,7 @@ jobs:
 
       - name: Start Backend Server
         run: |
-          cd backend
+          cd recipe_management_backend
           ./mvnw spring-boot:run & sleep 15
 
       - name: Run OWASP ZAP Scan
