--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Grant execute permissions to Maven Wrapper
+        run: chmod +x recipe_management_backend/mvnw
+
       - name: Build Java Backend
         run: cd recipe_management_backend && ./mvnw clean package  # Ensure code is built
 
@@ -63,6 +66,8 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+      - name: Grant execute permissions to Maven Wrapper
+        run: chmod +x recipe_management_backend/mvnw
 
       - name: Build and Test Spring Boot App
         run: cd backend && ./mvnw clean verify
@@ -75,6 +80,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Grant execute permissions to Maven Wrapper
+        run: chmod +x recipe_management_backend/mvnw
+        
       - name: Start Backend Server
         run: |
           cd recipe_management_backend
