--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ build/
 .vscode/
 
 # Ignore properties files
-src/main/resources/application.properties
-src/main/resources/application.yml
-src/main/resources/application-*.properties
-src/main/resources/application-*.yml
+# src/main/resources/application.properties
+# src/main/resources/application.yml
+# src/main/resources/application-*.properties
+# src/main/resources/application-*.yml
