--- a/recipe_management_backend/pom.xml
+++ b/recipe_management_backend/pom.xml
@@ -50,6 +50,12 @@
 <!--			<artifactId>hibernate-core</artifactId>-->
 <!--		</dependency>-->
 
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+
 		<!-- Jackson for JSON Processing -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
