--- a/recipe_management_backend/pom.xml
+++ b/recipe_management_backend/pom.xml
@@ -37,14 +37,14 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
-<!--		&lt;!&ndash; MySQL Driver &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>mysql</groupId>-->
-<!--			<artifactId>mysql-connector-java</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
+		<!-- MySQL Driver -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
-<!--		&lt;!&ndash; Hibernate (Optional, included in JPA Starter) &ndash;&gt;-->
+<!--				&lt;!&ndash; Hibernate (Optional, included in JPA Starter) &ndash;&gt;-->
 <!--		<dependency>-->
 <!--			<groupId>org.hibernate</groupId>-->
 <!--			<artifactId>hibernate-core</artifactId>-->
