--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,14 @@ jobs:
           echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> $GITHUB_ENV
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
 
+      - name: Debug Environment Variables
+        run: |
+          echo "DB_USERNAME=$DB_USERNAME"
+          echo "DB_PASSWORD is set but hidden"
+        env:
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
   sast_scan:
     name: Static Application Security Testing (SAST)
     runs-on: ubuntu-latest
@@ -61,6 +69,10 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
 
+        env:
+            DB_USERNAME: ${{ secrets.DB_USERNAME }}
+            DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
 
   test_backend:
     name: Test Backend (Spring Boot JUnit)
@@ -80,6 +92,10 @@ jobs:
 
       - name: Build and Test Spring Boot App
         run: cd backend && ./mvnw clean verify
+
+        env:
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
   dast_scan:
     name: Dynamic Application Security Testing (DAST)
@@ -101,3 +117,7 @@ jobs:
         uses: zaproxy/action-full-scan@v0.4.0
         with:
           target: 'http://localhost:8080'
+
+        env:
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
