--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,33 +74,10 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
 
-
-  test_backend:
-    name: Test Backend (Spring Boot JUnit)
-    runs-on: ubuntu-latest
-    needs: sast_scan
-    env:
-      DB_USERNAME: ${{ secrets.DB_USERNAME }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Grant execute permissions to Maven Wrapper
-        run: chmod +x recipe_management_backend/mvnw
-
-      - name: Build and Test Spring Boot App
-        run: cd backend && ./mvnw clean verify
-
   dast_scan:
     name: Dynamic Application Security Testing (DAST)
     runs-on: ubuntu-latest
-    needs: [test_backend]
+    needs: sast_scan
     env:
       DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -120,4 +97,26 @@ jobs:
         uses: zaproxy/action-full-scan@v0.4.0
         with:
           target: 'http://localhost:8080'
+
+  test_backend:
+    name: Test Backend (Spring Boot JUnit)
+    runs-on: ubuntu-latest
+    needs: dast_scan
+    env:
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: Grant execute permissions to Maven Wrapper
+        run: chmod +x recipe_management_backend/mvnw
+
+      - name: Build and Test Spring Boot App
+        run: cd backend && ./mvnw clean verify
 
