--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,32 @@ jobs:
         run: |
           echo "DB_USERNAME=$DB_USERNAME"
           echo "DB_PASSWORD is set but hidden"
+  
+  test_backend:
+    name: Test Backend (Spring Boot JUnit)
+    runs-on: ubuntu-latest
+    env:
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: Grant execute permissions to Maven Wrapper
+        run: chmod +x recipe_management_backend/mvnw
+
+      - name: Build and Test Spring Boot App
+        run: cd backend && ./mvnw clean verify
 
   sast_scan:
     name: Static Application Security Testing (SAST)
     runs-on: ubuntu-latest
+    needs: [test_backend]
     env:
       DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -98,25 +120,4 @@ jobs:
         with:
           target: 'http://localhost:8080'
 
-  test_backend:
-    name: Test Backend (Spring Boot JUnit)
-    runs-on: ubuntu-latest
-    needs: dast_scan
-    env:
-      DB_USERNAME: ${{ secrets.DB_USERNAME }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Grant execute permissions to Maven Wrapper
-        run: chmod +x recipe_management_backend/mvnw
-
-      - name: Build and Test Spring Boot App
-        run: cd backend && ./mvnw clean verify
 
