--- a/recipe_management_backend/pom.xml
+++ b/recipe_management_backend/pom.xml
@@ -37,12 +37,19 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
-<!--		&lt;!&ndash; MySQL Driver &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>mysql</groupId>-->
-<!--			<artifactId>mysql-connector-java</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
+		<!-- MySQL Driver -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.0.33</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 
 <!--		&lt;!&ndash; Hibernate (Optional, included in JPA Starter) &ndash;&gt;-->
 <!--		<dependency>-->
