Added debugging and logging

--- a/recipe_management_backend/src/main/resources/application.properties
+++ b/recipe_management_backend/src/main/resources/application.properties
@@ -5,4 +5,9 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.boot.autoconfigure=DEBUG
+logging.level.com.fasterxml.jackson=DEBUG
 
