--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test_backend
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/SIT' || github.ref == 'refs/heads/cicd-setup'
+    env:
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -100,6 +103,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: sast_scan
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/cicd-setup'
+    env:
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
