--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,9 @@ jobs:
         with:
           languages: javascript, java
           queries: security-and-quality
+      
+      - name: Build Java Backend
+        run: cd recipe_management_backend && ./mvnw clean package -DskipTests
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
