--- a/recipe_management_backend/src/main/resources/application.properties
+++ b/recipe_management_backend/src/main/resources/application.properties
@@ -10,4 +10,4 @@ logging.level.org.springframework.boot=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.boot.autoconfigure=DEBUG
 logging.level.com.fasterxml.jackson=DEBUG
-
+logging.level.org.springframework.security=DEBUG
