feat: partially encapsulate error handling of http requests in http-hook

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "useUnknownInCatchVariables": false,
     "jsx": "react-jsx",
     "baseUrl": "./src",
     "paths": {
