--- a/recipe_management_backend/src/main/resources/application.properties
+++ b/recipe_management_backend/src/main/resources/application.properties
@@ -11,3 +11,9 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.boot.autoconfigure=DEBUG
 logging.level.com.fasterxml.jackson=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# Swagger UI properties
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
