chore: added db data population script and added timezone property

--- a/recipe_management_backend/src/main/resources/application.properties
+++ b/recipe_management_backend/src/main/resources/application.properties
@@ -11,6 +11,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.boot.autoconfigure=DEBUG
 logging.level.com.fasterxml.jackson=DEBUG
 logging.level.org.springframework.security=DEBUG
+spring.task.scheduling.time-zone=Asia/Tokyo
 
 # Swagger UI properties
 springdoc.swagger-ui.path=/swagger-ui.html
