--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,13 @@ jobs:
       - name: Run ESLint
         run: cd frontend && npx eslint . --ext .ts,.tsx
 
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: linting tool report
+          path: |
+            ./eslint-report
+
   load_env:
     name: Load Environment Variables From Secrets
     runs-on: ubuntu-latest
@@ -102,6 +109,13 @@ jobs:
         with:
           category: "/language:java"
           output: sarif
+      
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: sast report
+          path: |
+            ./dependency-check-report.html
 
   dast_scan:
     name: Dynamic Application Security Testing (DAST)
@@ -129,3 +143,10 @@ jobs:
         uses: zaproxy/action-full-scan@v0.12.0
         with:
           target: 'http://localhost:8080'
+      
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: DAST Scan Report
+          path: |
+            ./owasp-report
